--- a/work/trex/style.css
+++ b/work/trex/style.css
@@ -73,12 +73,18 @@ html, body {
 	/*background-position: ;*/
 }
 
-#more{
-	
-}
-
-@media screen and (min-width: 0px) and (max-width: 767px){
+@media screen and (min-width: 414px){
 	#content_wrapper{
-		font-size: 200%;
+		font-size: 100%;
 	}
 }
+
+@media screen and (min-width: 0px) and (max-width: 413px){
+	#content_wrapper{
+		font-size: 200%;
+		transform: scale(1.5);
+	}
+}
+
+/*Problem is the font size is controlled by CSS but the window size is controlled by JS...*/
+
