--- a/work/trex/style.css
+++ b/work/trex/style.css
@@ -24,14 +24,15 @@ html, body {
 }
 
 #infoWin{
-	padding: 1em;
+	/*padding: 1em;*/
 	text-align: center;
 	position: absolute;
-	margin: auto;
+	
 	top: 0;
     bottom: 0;
     left: 0;
     right: 0;
+    margin: auto;
 	/*vertical-align: middle;*/
 }
 
