--- a/work/trex/style.css
+++ b/work/trex/style.css
@@ -63,8 +63,7 @@ html, body {
     bottom: 0;
     left: 0;
     right: 0;
-    margin: auto;
-    width: 80%;
+    /*width: 80%;*/
     height: 70%;
 	/*vertical-align: middle;*/
 }
@@ -281,6 +280,9 @@ html, body {
 	#more{
 		height: 80%;
 	}
+	#infoWin{
+		margin: auto;
+	}
 }
 
 @media screen and (min-width: 0px) and (max-width: 413px){
@@ -290,6 +292,9 @@ html, body {
 	}
 	#more{
 		height: 100%;
+	}
+	#infoWin{
+		margin: 0;
 	}
 }
 
