--- a/work/trex/style.css
+++ b/work/trex/style.css
@@ -66,7 +66,7 @@ html, body {
     right: 0;
     margin: auto;
     /*width: 80%;*/
-    height: 70%;
+    height: 50%;
 	/*vertical-align: middle;*/
 }
 
@@ -378,7 +378,7 @@ li.instagram{
 @media screen and (min-width: 0px) and (max-width: 413px){
 	#content_wrapper{
 		/*font-size: 150%;*/
-		transform: scale(1.2);
+		/*transform: scale(1.2);*/
 	}
 	#more{
 		width: 100%;
