--- a/work/trex/style.css
+++ b/work/trex/style.css
@@ -66,19 +66,19 @@ html, body {
     right: 0;
     margin: auto;
     /*width: 80%;*/
-    height: 50%;
-	/*vertical-align: middle;*/
+    height: 80%;
 }
 
 #infoWin > div{
 	vertical-align: middle;
-
+	margin-bottom: 20px;
 }
 
 #infoWin > div > h1{
 	font-family: PixelMplus12;
 	font-weight: 400;
 	font-size: 2em;
+	margin:1em 0 0 0;
 }
 
 #infoWin > div > blockquote{
@@ -138,12 +138,16 @@ html, body {
 }
 
 #more{
-	padding: 2em;
+	/*padding: 2em;*/
 	width: 400px;
 	height: 400px;
 	background-color: white;
 	margin:2em;
 	overflow: scroll;
+}
+
+#more::webkit-scrollbar{
+	display: none;
 }
 
 #more > div{
@@ -322,7 +326,7 @@ li.instagram{
 }
 
 .more_open{
-	margin-top: 2em;
+	margin-top: 20px;
 	border: 0px solid black;
 	background-color: white;
 	font-family: pixelMplus12;
@@ -366,25 +370,20 @@ li.instagram{
 
 
 @media screen and (min-width: 414px){
-	#content_wrapper{
-		font-size: 100%;
-	}
 	#more{
-		height: 70%;
-		max-height: 420px;
+		/*height: 70%;*/
+		height: 550px;
+		overflow: hidden;
 	}
 }
 
 @media screen and (min-width: 0px) and (max-width: 413px){
-	#content_wrapper{
-		/*font-size: 150%;*/
-		/*transform: scale(1.2);*/
-	}
 	#more{
 		width: 100%;
 		height: 100%;
 		margin: 0;
 		padding: 0;
+		overflow: scroll;
 	}
 }
 
